# context-pilot

./: README.md  crafter.txt  meta_research.txt  pyproject.toml
src/pilot/: main.py  prompts.py
