# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "context-pilot"
version = "1.0.1"
authors = [
  { name = "Jonas Schulte", email = "you@example.com" },
]
description = "An intelligent context manager for AI assistants."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
# Your script's dependencies go here
dependencies = [
    "tiktoken",
    "pyperclip",
]

[project.urls]
"Homepage" = "https://github.com/JonasS1202/context-pilot#"

# This is the magic part that creates the command-line tool
[project.scripts]
pilot = "pilot.main:main"